fixed form spacing, add stlying for start_project

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -59,9 +59,10 @@
 }
 
 .border-form-div {
-  max-width: 500px;
+  max-width: 600px;
   padding: 19px 29px 29px;
   margin: 0 auto 20px;
+  margin-top: 100px;
   border: 1px solid black;
   -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
